# vbwd-plugin-bdv

./: CHANGELOG.md  README.md  __init__.py  admin-config.json  config.json  populate_db.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
bdv/: __init__.py  routes.py
bdv/agents/: baseline.py  llm_seat.py
bdv/bot/: consumer.py
bdv/core/: board.py  dice.py  economy.py  effects.py  engine.py  errors.py  fees.py  options.py  pricing.py  replay.py  state.py
bdv/models/: __init__.py  board.py  match.py
bdv/repositories/: board_repository.py  match_repository.py
bdv/services/: access_seeder.py  agent_seeder.py  board_seeder.py  board_spec_factory.py  match_service.py  seed_board.py  service_factory.py  slug.py
bdv/services/data_exchange/: bdv_exchangers.py
migrations/versions/: 20260721_bdv_initial.py  20260722_bdv_agent_roster.py  20260722_bdv_fill_policy.py  20260722_bdv_llm_seats.py  20260722_bdv_match_slug.py  20260722_bdv_table_chat.py
tests/: conftest.py
tests/integration/: test_board_and_match.py
tests/unit/: conftest.py  test_bot_bridge.py  test_core_purity.py  test_economy.py  test_effects.py  test_engine.py  test_engine_regressions.py  test_fees.py  test_llm_seat.py  test_pricing.py  test_replay.py  test_seed_board.py  test_slug.py  test_trading_consent.py
